app/kubernetes/backend/API/API-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: fowx/cloudproject_api:latest
          imagePullPolicy: IfNotPresent
          name: api
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          ports:
            - containerPort: 8080
      restartPolicy: Always
