app/kubernetes/backend/API/API-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    - name: api
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: api
  type: LoadBalancer
