app/kubernetes/backend/API/API-mesh.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: fowx/cloudproject_api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    - name: api
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: api
  type: LoadBalancer

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-mesh
spec:
  hosts:
    - backend.local
  gateways:
    - backend-gateway
  http:
    - route:
        - destination:
            host: backend-service
            port:
              number: 8080

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: backend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
