app/kubernetes/backend/API/API.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: fowx/cloudproject_api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: api
  type: LoadBalancer

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-mesh
spec:
  hosts:
    - api.local
    - 127.0.0.1
  gateways:
    - api-gateway
  http:
    - route:
        - destination:
            host: api-service
            port:
              number: 8080

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: api-database-policy
  namespace: dev
spec:
  selector:
    matchLabels:
      app: database
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/dev/sa/database"]
